se cambian campos de bandas y musicos a ingles

--- a/src/app/components/band-detail/band-detail.component.html
+++ b/src/app/components/band-detail/band-detail.component.html
@@ -15,7 +15,7 @@
         <span>Creación: {{bandDetail.creationDate | date: 'yyyy-MM-dd' }} </span>
       </div>
       <div class="detail">
-        <span>Tipo de artista: Banda </span>
+        <span>Artist Type: Band </span>
       </div>
     </div>
     <div class="container-button">
@@ -32,17 +32,17 @@
     <hr/>
     <div class="table-title">
       <div class="container-div">
-        <span>Álbum</span>
+        <span>Album</span>
       </div>
       <div class="container-div">
-        <span>Nombre</span>
+        <span>Name</span>
       </div>
       <div class="container-div">
-        <span>Fecha Publicación</span>
+        <span>Release date</span>
       </div>
 
       <div class="container-div">
-        <span>Casa Discografica</span>
+        <span>Record label</span>
       </div>
     </div>
     <hr/>
@@ -68,13 +68,13 @@
     <hr/>
     <div class="table-title">
       <div class="container-div">
-        <span>Músico</span>
+        <span>Musician</span>
       </div>
       <div class="container-div">
-        <span>Nombre</span>
+        <span>Name</span>
       </div>
       <div class="container-div">
-        <span>Fecha de nacimiento</span>
+        <span>Birth date</span>
       </div>
     </div>
     <hr/>
@@ -97,13 +97,13 @@
     <hr/>
     <div class="table-title">
       <div class="container-div">
-        <span>Premio</span>
+        <span>Prize</span>
       </div>
       <div class="container-div">
-        <span>Otorga</span>
+        <span>Organization</span>
       </div>
       <div class="container-div">
-        <span>Fecha de premiación</span>
+        <span>Premiation date</span>
       </div>
     </div>
     <hr/>
