--- a/src/app/components/performer-list/performer-list.component.html
+++ b/src/app/components/performer-list/performer-list.component.html
@@ -10,7 +10,7 @@
             </div>
             <div class="artist-type">
 
-              <span>Músico</span>
+              <span>Musician</span>
             </div>
             <div class="fav-btn">
               <a href="#" class="btn btn-outline-dark">Favorite</a>
@@ -28,7 +28,7 @@
             <h1 class="performer-name" id="band-name-{{i}}"><span id="band-name">{{band.name}}</span></h1>
           </div>
           <div class="artist-type">
-            <span>Banda</span>
+            <span>Band</span>
           </div>
           <div class="fav-btn">
             <a href="#" class="btn btn-outline-dark">Favorite</a>
