--- a/src/app/components/performer-list/performer-list.component.scss
+++ b/src/app/components/performer-list/performer-list.component.scss
@@ -2,7 +2,7 @@
   display:inline-block;
   background: black;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 
   .container-performers {
     display: flex;
