--- a/src/app/components/performer-list/performer-list.component.html
+++ b/src/app/components/performer-list/performer-list.component.html
@@ -10,10 +10,10 @@
             </div>
             <div class="artist-type">
 
-              <span>Musician</span>
+              <span i18n>Musician</span>
             </div>
             <div class="fav-btn">
-              <a href="#" class="btn btn-outline-dark">Favorite</a>
+              <a href="#" class="btn btn-outline-dark" i18n>Favorite</a>
             </div>
         </div>
       </div>
@@ -28,10 +28,10 @@
             <h1 class="performer-name" id="band-name-{{i}}"><span id="band-name">{{band.name}}</span></h1>
           </div>
           <div class="artist-type">
-            <span>Band</span>
+            <span i18n>Band</span>
           </div>
           <div class="fav-btn">
-            <a href="#" class="btn btn-outline-dark">Favorite</a>
+            <a href="#" class="btn btn-outline-dark" i18n>Favorite</a>
           </div>
       </div>
     </div>
