--- a/src/app/components/detail-album/detail-album.component.html
+++ b/src/app/components/detail-album/detail-album.component.html
@@ -17,7 +17,7 @@
         <span i18n>Genre: {{album.genre}} </span>
       </div>
       <div class="detail">
-        <span i18n>{{album.description}}</span>
+        <span id="description-detail-album" i18n>{{album.description}}</span>
       </div>
     </div>
     <div class="container-button">
