--- a/src/app/shared/components/toast-message/toast-message.component.html
+++ b/src/app/shared/components/toast-message/toast-message.component.html
@@ -4,10 +4,10 @@
    </div>
    <div class="content-information">
        <div class="title-toast">
-         <span i18n>{{toast.title}}</span>
+         <span i18n id="span-title-{{toast.title}}">{{toast.title}}</span>
        </div>
        <div class="message-toast">
-         <span i18n>{{toast.description}}</span>
+         <span i18n id="span-toast-message">{{toast.description}}</span>
        </div>
    </div>
 </div>
