Se implememntan pruebas e2e para performer-list

--- a/src/app/components/band-detail/band-detail.component.html
+++ b/src/app/components/band-detail/band-detail.component.html
@@ -12,7 +12,7 @@
         <span id="band-description">{{bandDetail.description}} </span>
       </div>
       <div class="detail">
-        <span i18n>Creation date: {{bandDetail.creationDate | date: 'yyyy-MM-dd' }} </span>
+        <span id='band-creation-date' i18n>Creation date: {{bandDetail.creationDate | date: 'yyyy-MM-dd' }} </span>
       </div>
       <div class="detail">
         <span i18n>Artist Type: Band </span>
