--- a/src/app/components/musician-detail/musician-detail.component.html
+++ b/src/app/components/musician-detail/musician-detail.component.html
@@ -38,7 +38,7 @@
         <span i18n>Name</span>
       </div>
       <div class="container-div">
-        <span i18n>Relase date</span>
+        <span i18n>Release date</span>
       </div>
 
       <div class="container-div">
