Added the test to run with protractor

--- a/src/app/components/detail-album/detail-album.component.html
+++ b/src/app/components/detail-album/detail-album.component.html
@@ -22,7 +22,7 @@
     </div>
     <div class="container-button">
       <div class="show-comment">
-        <button  class="button-style" (click)="goBack()" i18n>Go Back</button>
+        <button  class="button-style" (click)="goBack()" i18n id="btn-go-back">Go Back</button>
       </div>
       <div class="show-comment">
         <button class="button-style" (click)="checkComment()" i18n>Show  comment</button>
