--- a/src/app/shared/components/search/search.component.html
+++ b/src/app/shared/components/search/search.component.html
@@ -1,3 +1,3 @@
 <div class="container-search">
-  <input type="text" value="" placeholder="Buscador..." class="input-text" #input (keyup)="keyup(input.value)">
+  <input id="search-text" type="text" value="" placeholder="Buscador..." class="input-text" #input (keyup)="keyup(input.value)">
 </div>
