Added the test to check end to end in addd comment

--- a/src/app/components/detail-album/detail-album.component.html
+++ b/src/app/components/detail-album/detail-album.component.html
@@ -25,7 +25,7 @@
         <button  class="button-style" (click)="goBack()" i18n id="btn-go-back">Go Back</button>
       </div>
       <div class="show-comment">
-        <button class="button-style" (click)="checkComment()" i18n>Show  comment</button>
+        <button class="button-style" (click)="checkComment()" i18n id="btn-go-comment">Show  comment</button>
       </div>
     </div>
   </div>
