--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -5,7 +5,7 @@
   <div class="container-comment-detail">
     <div class="img-log">
       <div class="genre">
-        <h1 i18n>Comment</h1>
+        <h1 i18n id="title-content">Comment</h1>
       </div>
     </div>
     <div class="container-comment-text">
@@ -27,12 +27,12 @@
       </div>
 
       <div class="comment-event" (click)="addComment()">
-           <span i18n>Add a comment</span>
+           <span i18n id="btn-added-comment">Add a comment</span>
       </div>
     </div>
     <div class="container-button">
       <div>
-        <button type="button" class="design-button" (click)="goBack()" i18n>Go Back</button>
+        <button type="button" class="design-button" (click)="goBack()" i18n id="btn-go-back">Go Back</button>
       </div>
     </div>
   </div>
@@ -41,7 +41,7 @@
   <div class="row-comment" *ngFor="let item of album.comments; let i = index">
     <div class="table-title">
       <div class="container-div">
-        <span i18n>{{item.description}}</span>
+        <span i18n id="text-content-{{i}}">{{item.description}}</span>
       </div>
       <div class="container-div">
         <div *ngFor="let j of [].constructor(item.rating)">
