--- a/src/app/components/comment/comment.component.scss
+++ b/src/app/components/comment/comment.component.scss
@@ -1,7 +1,7 @@
 .container-comment {
   background: black;
   width: 100%;
-  height: 100vh;
+  height: 100%;
 
   .toast-style-warning {
     padding-left: 140px;
