--- a/src/app/components/prize-create/prize-create.component.html
+++ b/src/app/components/prize-create/prize-create.component.html
@@ -62,6 +62,7 @@
 
     <div class="form-group mx-sm-3 mb-2 btn-group">
       <button type="submit"
+              id="create-prize-submit"
               class="btn btn-primary submit-btn"
               [disabled]="!prizesForm.valid" i18n>
               Create
@@ -96,6 +97,7 @@
 
     <div class="form-group mx-sm-3 mb-2 btn-group">
       <button type="submit"
+              id="add-to-band-submit"
               class="btn btn-primary submit-btn"
               [disabled]="!prizesBandForm.valid" i18n>
               Add to Band
