--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="container-header">
     <div *ngFor="let item of header; let i = index" [className]="item.enabled ? 'container-option-enabled' : 'container-option-disabled'" (click)="clickItem(i)">
-      <span id='header-{{i}}'>{{item.title}}</span>
+      <span id="{{item.title}}">{{item.title}}</span>
     </div>
 </div>
