--- a/src/app/components/collector-detail/collector-detail.component.html
+++ b/src/app/components/collector-detail/collector-detail.component.html
@@ -9,10 +9,10 @@
     </div>
     <div class="container-button">
       <div class="button">
-        <button  class="button-style" (click)="goBack()" name="Regresar a lista de albumes">Regresar</button>
+        <button  class="button-style" (click)="goBack()" name="Regresar a lista de albumes" i18n>Return</button>
       </div>
       <div class="button">
-        <button  class="button-style" (click)="addAlbumToPerformer(collectorDetail)" name="Add album to performer">Add new Album</button>
+        <button  class="button-style" (click)="addAlbumToPerformer(collectorDetail)" name="Add album to performer" i18n>Add new Album</button>
       </div>
     </div>
 
@@ -20,16 +20,16 @@
 
   </div>
 <div class="container-fluid2">
-  <h1> Comentarios hechos por {{collectorDetail.name}}</h1>
+  <h1 i18n> Comments made by {{collectorDetail.name}}</h1>
 </div>
 
 <div class="container-fluid">
 <table class="table">
-  <caption>Comentarios</caption>
+  <caption i18n>Comments</caption>
   <thead>
     <tr>
-      <th class="h4" width="35%" id="columna-album">Album</th>
-      <th class="h4" width="40%" id="columna-comentario">Comentario</th>
+      <th class="h4" width="35%" id="columna-album" i18n>Album</th>
+      <th class="h4" width="40%" id="columna-comentario" i18n>Comment</th>
       <th class="h4" id="columna-rating">Rating</th>
     </tr>
   </thead>
@@ -56,15 +56,15 @@
 </div>
 
 <div class="container-fluid2">
-<h1> Artistas favoritos de {{collectorDetail.name}}</h1>
+<h1 i18n> Favorite performers of {{collectorDetail.name}}</h1>
 </div>
 <div class="container-fluid">
 <table class="table">
-  <caption>Artistas Favoritos</caption>
+  <caption i18n>Favorite performers</caption>
   <thead>
     <tr>
-      <th class="h4" width="75%" id="columna-nombre">Nombre</th>
-      <th class="h4" width="25%" id="columna-foto">Foto</th>
+      <th class="h4" width="75%" id="columna-nombre" i18n>Name</th>
+      <th class="h4" width="25%" id="columna-foto" i18n>Photo</th>
     </tr>
   </thead>
   <tbody>
@@ -86,17 +86,17 @@
   </div>
 </div>
 <div class="container-fluid2">
-<h1> Albumes de {{collectorDetail.name}}</h1>
+<h1 i18n> Albumes of {{collectorDetail.name}}</h1>
 </div>
 <div class="container-fluid">
 <table class="table" >
-  <caption>Albumes</caption>
+  <caption i18n>Albumes</caption>
   <thead>
     <tr>
-      <th class="h4" width="27%" id="columna-nombre-Album">Nombre</th>
-      <th class="h4" width="25%" id="columna-foto">Cover</th>
-      <th class="h4" width="24%" id="columna-precio">Precio</th>
-      <th class="h4" width="25%" id="columna-estado">Estado</th>
+      <th class="h4" width="27%" id="columna-nombre-Album" i18n>Name</th>
+      <th class="h4" width="25%" id="columna-foto" i18n>Cover</th>
+      <th class="h4" width="24%" id="columna-precio" i18n>Price</th>
+      <th class="h4" width="25%" id="columna-estado" i18n>Status</th>
     </tr>
   </thead>
   <tbody>
