--- a/src/app/components/prize-create/prize-create.component.html
+++ b/src/app/components/prize-create/prize-create.component.html
@@ -1,11 +1,12 @@
 <div class="main-container">
- <form
+  <div class="form-container col-6 center">
+  <form
   [formGroup]="prizesForm"
   (ngSubmit)="!prizesForm.invalid && createPrize(prizesForm.value)">
 
 
     <div class="form-group mx-sm-3 mb-2">
-      <label class="form-label" for="name" i18n>
+      <label class="form-label name-label" for="name" i18n>
           Name
       </label>
        <h1><input novalidate id="name"
@@ -45,10 +46,10 @@
       <label class="form-label" for="description">
           Description
       </label>
-      <input novalidate id="description"
+      <textarea novalidate id="description"
             class="form-control"
             formControlName="description"
-            i18n-placeholder placeholder="Prize description">
+            i18n-placeholder placeholder="Prize description"></textarea>
       <div class="alert alert-danger alert-dismissible fade show"
           *ngIf="prizesForm.get('description').hasError('required') &&
           prizesForm.get('description').touched" i18n>
@@ -108,4 +109,5 @@
               (click)="cancelCreation()" i18n>Cancel</button>
     </div>
   </form>
+ </div>
 </div>
