--- a/src/app/components/musician-create/musician-create.component.scss
+++ b/src/app/components/musician-create/musician-create.component.scss
@@ -3,12 +3,25 @@
   width: 100%;
   height: 100vh;
 
+  .form-container {
+
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+  }
+  .name-label{
+    padding-top: 25px;
+  }
+
   .form-label{
     color: white;
     font-weight: bold;
   }
   .btn-group{
-    position:center;
+
+    margin: auto;
+    width: 30%;
+    padding: 10px;
     .submit-btn{
 
       background-color:white;
