Se agregan pruebas para HU12 y HU13

--- a/src/app/components/performer-list/performer-list.component.html
+++ b/src/app/components/performer-list/performer-list.component.html
@@ -14,7 +14,7 @@
             </div>
             <div class="fav-btn">
               <div class="button">
-                <button  class="button-style" (click)="addMusicianToFavorite(musician)" name="Add collect to performer">Favorite</button>
+                <button  class="button-style" (click)="addMusicianToFavorite(musician)" id="favorite-musician-{{i}}" name="Add collect to performer">Favorite</button>
               </div>
             </div>
         </div>
@@ -34,7 +34,7 @@
           </div>
           <div class="fav-btn">
             <div class="button">
-              <button  class="button-style" (click)="addBandToFavorite(band)" name="Add collect to performer">Favorite</button>
+              <button  class="button-style" (click)="addBandToFavorite(band)" id="favorite-band-{{i}}"name="Add collect to performer">Favorite</button>
             </div>
           </div>
       </div>
